--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,11 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Dagger
+    implementation 'com.google.dagger:dagger:2.9'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
+
     // For Kotlin use kapt instead of annotationProcessor
 
 
